--- a/duktape/combo/res/tpl/contents.html
+++ b/duktape/combo/res/tpl/contents.html
@@ -1,5 +1,5 @@
     <div id="layout-body">
-	<div class="jumbotron" style="padding:8px;">
+	<div class="jumbotron">
 		<div class="page-header">
 			<h3 id="navbars"><%- title %></h3>
 		</div>
