--- a/duktape/combo/res/tpl/page.html
+++ b/duktape/combo/res/tpl/page.html
@@ -11,7 +11,8 @@
     <%- menu %>
     <%- contents %>
     <script>
-	    <%- script %>
+		<%- script %>
+		window.history.pushState('Home', 'Home', '/');
     </script>
   </body>
 </html>
