--- a/duktape/combo/res/tpl/menu.html
+++ b/duktape/combo/res/tpl/menu.html
@@ -1,9 +1,8 @@
     <div id="layout-menu">
       <div class="navbar navbar-expand-sm bg-dark" id="Menu">
         <ul class="navbar-nav">
-          <li><a class="nav-link" href="#">Sample Menu Item 1</a></li>
-          <li><a class="nav-link" href="#">Sample Menu Item 2</a></li>
-          <li><a class="nav-link" href="#">Sample Menu Item 3</a></li>
+          <li><a class="nav-link" href="/?cmd=home">Home</a></li>
+          <li><a class="nav-link" href="/?cmd=login">Login</a></li>
         </ul>
       </div>
     </div>
