--- a/duktape/combo/res/tpl/menu.html
+++ b/duktape/combo/res/tpl/menu.html
@@ -3,6 +3,8 @@
         <ul class="navbar-nav">
           <li><a class="nav-link" href="/?cmd=home">Home</a></li>
           <li><a class="nav-link" href="/?cmd=login">Login</a></li>
+          <li><a class="nav-link" href="/?cmd=test">Test</a></li>
+          <li><a class="nav-link" href="/?cmd=usrrst">Reset User Data</a></li>
         </ul>
       </div>
     </div>
