--- a/duktape/combo/res/tpl/page.html
+++ b/duktape/combo/res/tpl/page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <link rel="icon" href="favicon.ico" type="image/png">
     <link rel="stylesheet" href="/lib/bootstrap/slate/bootstrap.css">
-    <script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"></script>
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"></script> -->
   </head>
   <body>
     <%- menu %>
