--- a/duktape/combo/res/tpl/contents.html
+++ b/duktape/combo/res/tpl/contents.html
@@ -1,8 +1,8 @@
     <div id="layout-body">
 	<div class="jumbotron" style="padding: 8px;border: unset !important;">
 		<div class="page-header">
-			<h3 id="navbars"><%- title %></h3>
+			<h3 id="navbars"><%= title %></h3>
 		</div>
 	</div>
-	<%- contents %>
+	<%= contents %>
     </div>
